Added JavaDoc, implemented TerrainException and UnitTypeException, revisions to Tests.