@@ -1,16 +1,17 @@
 package edu.ntnu.stud.idatt2001.sojohans.wargames.domain.units;
 
+import edu.ntnu.stud.idatt2001.sojohans.wargames.domain.exceptions.TerrainException;
 import edu.ntnu.stud.idatt2001.sojohans.wargames.domain.exceptions.UnitAttackException;
+import edu.ntnu.stud.idatt2001.sojohans.wargames.domain.exceptions.UnitTypeException;
 import edu.ntnu.stud.idatt2001.sojohans.wargames.domain.factory.UnitType;
-import edu.ntnu.stud.idatt2001.sojohans.wargames.domain.terrain.TerrainType;
+import edu.ntnu.stud.idatt2001.sojohans.wargames.domain.terrainAndOtherBonuses.TerrainType;
 
 import java.util.Objects;
 
 /**
- * Class for describing a Unit.
+ * Class for describing an abstract Unit.
  */
 public abstract class Unit {
-
     private UnitType unitType;
     private final String name;
     private int health;
@@ -19,17 +20,25 @@ public abstract class Unit {
 
 
     /**
-     * The constructor method for a Unit object.
-     * Neither Health nor Attack can be 0 or lower.
-     * Armor can however be 0, as full offensive Unit might be developed later on.
+     * <p>
+     *     The constructor method for instantiating a Unit object.
+     * </p>
+     * <p>
+     *     Neither Health nor Attack can be zero or lower.
+     * </p>
+     * <p>
+     *     Armor can however be zero, as full offensive Unit might be developed later on.
+     * </p>
      * @param name Name of the Unit.
      * @param health Health of the Unit.
      * @param attack Attack-points of the Unit.
      * @param armor Armor-points of the Unit.
-     * @throws IllegalArgumentException If parameters are invalid.
+     * @throws IllegalArgumentException If the name argument is null or empty, if the health and attack
+     * arguments is less than or equal to zero, or if the armor argument is less than zero.
      */
-    public Unit(String name, int health, int attack, int armor) throws IllegalArgumentException{
-        if (name == null || name.trim().isEmpty()){
+    public Unit(String name, int health, int attack, int armor)
+    throws IllegalArgumentException{
+        if (name == null || name.isBlank()){
             throw new IllegalArgumentException("Name of Unit cannot be null or empty!");
         }
         if (health <= 0){
@@ -48,15 +57,18 @@ public abstract class Unit {
     }
 
     /**
-     * Method for attacking another Unit.
+     * Method for attacking another Unit and lowering said Unit's health.
      * @param opponentUnit Opponent getting attacked.
-     * @param terrainType Which terrain the attack takes place in (affects damage and armor outcome).
-     * @throws UnitAttackException if either the health of the opponent or attacking Unit,
-     * is equal to or less than 0.
+     * @param terrainType Which terrain the attack takes place in (may affect damage and armor bonus depending
+     *                    on the UnitType).
+     * @throws TerrainException If the TerrainType argument is null.
+     * @throws UnitAttackException If the health argument of the opponent or the attacking Unit
+     * is less than or equal to zero.
      */
-    public void attack(Unit opponentUnit, TerrainType terrainType) throws UnitAttackException{
+    public void attack(Unit opponentUnit, TerrainType terrainType)
+    throws TerrainException, UnitAttackException{
         if (terrainType == null){
-            throw new UnitAttackException("Terrain type cannot be null!");
+            throw new TerrainException("Terrain type cannot be null!");
         }
         if (opponentUnit.health <= 0){
             throw new UnitAttackException(opponentUnit.name + " has 0 or less health left!");
@@ -73,8 +85,13 @@ public abstract class Unit {
             opponentUnit.health = opponentUnit.health -
                     (this.attack + this.getAttackBonus(terrainType, opponentUnit.getUnitType()))
                     + (opponentUnit.armor + opponentUnit.getResistBonus(terrainType));
+
             if (opponentUnit.health > healthBeforeAttack){
-                System.out.println("BRUH");
+                /*
+                This if-statement is not true with the current balancing of all unit damage and armor,
+                but this may change further down the road when for example a Unit is invincible to "Magic Damage".
+                 */
+                opponentUnit.health = healthBeforeAttack;
             }
         }
     }
@@ -82,6 +99,7 @@ public abstract class Unit {
     /**
      * Abstract method for getting the Unit's attack bonus.
      * @param terrainType Terrain, each terrain affects certain bonuses per units.
+     * @param unitType Opponents UnitType, some Units are strong against certain units.
      * @return Attack bonus of the Unit.
      */
     public abstract int getAttackBonus(TerrainType terrainType, UnitType unitType);
@@ -113,8 +131,10 @@ public abstract class Unit {
     /**
      * Method for setting the health of the Unit.
      * @param health Health of the Unit.
+     * @throws IllegalArgumentException If the health argument is less than or equals to zero.
      */
-    public void setHealth(int health) {
+    public void setHealth(int health)
+    throws IllegalArgumentException{
         if (health <= 0){
             throw new IllegalArgumentException("Health cannot be less than or equal to 0");
         }
@@ -137,6 +157,26 @@ public abstract class Unit {
         return armor;
     }
 
+    /**
+     * Method for getting the UnitType of the Unit.
+     * @return UnitType of the Unit.
+     */
+    public UnitType getUnitType() {
+        return unitType;
+    }
+
+    /**
+     * Method for setting the UnitType of the Unit.
+     * @param unitType UnitType of the Unit.
+     * @throws UnitTypeException If the UnitType argument is null.
+     */
+    public void setUnitType(UnitType unitType)
+    throws UnitTypeException{
+        if (unitType == null){
+            throw new UnitTypeException("UnitType cannot be null!");
+        }
+        this.unitType = unitType;
+    }
 
     /**
      * Method for getting Unit as a String.
@@ -172,13 +212,5 @@ public abstract class Unit {
     @Override
     public int hashCode() {
         return Objects.hash(name, health, attack, armor);
-    }
-
-    public UnitType getUnitType() {
-        return unitType;
-    }
-
-    public void setUnitType(UnitType unitType) {
-        this.unitType = unitType;
     }
 }
